new purple color

--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -20,9 +20,9 @@ $yellow-light: #ffdd99;
 $yellow-xlight: #fffaf0;
 $yellow-dark: #e5b450;
 
-$purple: #9f82d9;
-$purple-light: #c7b8e5;
-$purple-dark: #8165b8;
+$purple: #ad97d8;
+$purple-light: #c6b7e5;
+$purple-dark: #8874b2;
 
 $gray: #cccccc;
 $gray-light: #e5e5e5;
