--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -43,8 +43,8 @@ $colors:
         ("red-dark" $red-dark)
         ("green" $green)
         ("green-light" $green-light)
-        ("green" $green)
-        ("blue-dark" $blue-dark)
+        ("green-dark" $green-dark)
+        ("blue" $blue)
         ("blue-light" $blue-light)
         ("blue-dark" $blue-dark)
         ("yellow" $yellow)
