--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -29,10 +29,10 @@ $gray-light: #e5e5e5;
 $gray-xlight: #fcfcfc;
 $gray-dark: #b2b2b2;
 
-$blue-gray: #7e8c8c;
-$blue-gray-light: #a1b2b2;
+$blue-gray: #7e888c;
+$blue-gray-light: #dae2e6;
 $blue-gray-xlight: #f5f7f9;
-$blue-gray-dark: #5c6666;
+$blue-gray-dark: #3e5059;
 
 $background-gray: #f7fafc;
 $border-gray: #e5ecf1;
