--- a/src/scss/include/_fields.scss
+++ b/src/scss/include/_fields.scss
@@ -1,5 +1,6 @@
 //Field normal size
-$field-font-size: 17px;
+$field-font-size: 16px;
+$field-font-weight: 400;
 $field-height: $large-line-height;
 $field-padding: 6px;
 $field-padding-top: $field-padding;
