Made $gray darker

--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -24,7 +24,7 @@ $purple: #ad97d8;
 $purple-light: #c6b7e5;
 $purple-dark: #8874b2;
 
-$gray: #cccccc;
+$gray: #bfbfbf;
 $gray-light: #e5e5e5;
 $gray-xlight: #fcfcfc;
 $gray-dark: #b2b2b2;
