--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -2,7 +2,7 @@ $white: #ffffff;
 $black: #000000;
 
 $red: #f38379;
-$red-light: #f28379;
+$red-light: #f2a59d;
 $red-dark: #d1685e;
 
 $green: #63c7ae;
