Updated yellow and yellow-dark colors

--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -15,10 +15,10 @@ $blue-xlight: #dfeff7;
 $blue-dark: #47a0cc;
 $blue-xdark: #4192ba;
 
-$yellow: #f2ca79;
+$yellow: #f7c96c;
 $yellow-light: #ffdd99;
 $yellow-xlight: #fffaf0;
-$yellow-dark: #e5b450;
+$yellow-dark: #f2b53c;
 
 $purple: #ad97d8;
 $purple-light: #c6b7e5;
