--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -36,6 +36,7 @@ $blue-gray-dark: #3e5059;
 
 $background-gray: #f7fafc;
 $border-gray: #e5ecf1;
+$input-border-gray: #b8c5cc;
 
 $colors:
         ("red" $red)
