Added red-xlight and green-xlight

--- a/src/scss/include/_colors.scss
+++ b/src/scss/include/_colors.scss
@@ -3,10 +3,12 @@ $black: #000000;
 
 $red: #f38379;
 $red-light: #f2a59d;
+$red-xlight: #fcedeb;
 $red-dark: #d1685e;
 
 $green: #63c7ae;
 $green-light: #98d9c8;
+$green-xlight: #eaf7f4;
 $green-dark: #55ab95;
 
 $blue: #62b1d9;
