--- a/src/scss/include/_text.scss
+++ b/src/scss/include/_text.scss
@@ -1,6 +1,6 @@
 $font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
 $font-size: 14px;
-$font-color: $blue-gray-dark;
+$font-color: $blue-gray-xdark;
 
 $line-height: 24px;
 $tight-line-height: 16px;
