--- a/styles/_text.scss
+++ b/styles/_text.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic);
+
 $font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
 $font-size: 14px;
 $font-color: $blue-gray-xdark;
