updated to include new color

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -46,6 +46,7 @@ $gray-xlight:  #e5e5e5;
 $gray-light:   #cccccc;
 $gray-dark:    #7c7c7c;
 $gray-xdark:   #595959;
+$gray-xxdark:  #364A59;
 
 $white:       #ffffff;
 $skin-light:  #ffd4cc;
